# SBFem

./: CMakeLists.txt  README.md
BubbleFunctions/: CMakeLists.txt  Common.cpp  Common.h  Common3D.cpp  Common3D.h  main2DParabolicEq.cpp  mainregular3dsolution.cpp  mainregularsolution.cpp  mainsbfemsqrt.cpp
Hdiv/: CMakeLists.txt  SBFemHdiv.cpp  SBFemHdiv.h  hybridpoissoncollapsed.cpp  hybridpoissoncollapsed.h  mainregular.cpp  mainregularsolution.cpp
SBFem2D/: CMakeLists.txt  Common.cpp  Common.h  Common.h.bak  Common3D.cpp  Common3D.h  Main.cpp  Main.cpp.bak  MainJSon.cpp  OneCrack.txt  TwoOrthogonalCracks.txt  concretemesh.txt  concretemeshSaputra.txt  concretemesh_cmesh.vtk  concretemesh_geom.vtk  hexagon.cpp  hexagon.txt  main2DParabolicEq.cpp  mainEmbeddedFractures.cpp  maincheckerboard.cpp  maincircle.cpp  mainconcrete2d.cpp  mainheterogeneous.cpp  mainonefracture.cpp  mainpolygons.cpp  mainpolygonsMHMHdiv.cpp  mainregularsolution.cpp  mainsbfem_fem.cpp  mainshapefunctions.cpp  mainsqrt.cpp  mainsqrtsquare.cpp  mainstressintensity.cpp  rectangle.txt  test.json
SBFem3D/: CMakeLists.txt  Common3D.cpp  Common3D.h  Common3D.h.bak  CooksMembrane_poly_16_1_1.txt  CooksMembrane_sbfemesh_128_4_1.txt  CooksMembrane_sbfemesh_32_2_1.txt  CooksMembrane_sbfemesh_64_2_1.txt  Shanghai_Oriental_Pearl_Building_sbfemesh_256_geom.vtk  maincooksimulation.cpp  maindragonsimulation.cpp  mainpolygons.cpp  mainregular3Dfem.cpp  mainregular3dsolution.cpp  mainshangai.cpp  mainshangai_phil.cpp  mainspheresimulation.cpp  n512-id1-3.msh  n64-id1-3.msh  n8-id1-2.msh  spheres_10_50_sbfemesh_128_8_1.txt  spheres_10_50_sbfemesh_32_8_1.txt  spheres_10_50_sbfemesh_64_8_1.txt
